2024-01-24  Bart Schaefer  <schaefer@zsh.org>

	* 52476 + cf. 52479: Etc/FAQ.yo: more about nofork substitution

	* 52477: Src/Modules/curses.c: fix "zcurses mouse delay ..."

	* 52473: Doc/Zsh/mod_zutil.yo, Src/Modules/zutil.c: zstyle -q

	* 52468: Src/builtin.c, Src/utils.c: save and restore state of
	correct TTY when using read -s / -d

2024-01-14  Matthew Martin  <phy1729@gmail.com>

	* github #109: Wu Zhenyu: Completion/Linux/Command/_valgrind: Fix
	a typo

2024-01-05  Bart Schaefer  <schaefer@zsh.org>

	* 52465: Doc/Zsh/contrib.yo, Functions/Misc/zmv: use NULL_GLOB
	when expanding the input pattern to avoid NOMATCH exit

2023-12-06  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 52413: Completion/Unix/Command/_iconv: support Citrus version
	on macOS, DragonFly and NetBSD

2023-12-13  Oliver Kiddle  <opk@zsh.org>

	* Florian Weimer: 52383: configure.ac: Avoid incompatible pointer
	types in terminfo global variable checks

	* 52394: configure.ac: alter form of /dev/fd test to work where
	/bin/sh is ksh such as on Solaris 11

	* 52393: Test/ztst.zsh: fix tests on Solaris by omitting -a option
	to diff as it is not supported there

	* 52392: Src/makepro.awk: use octal escape to match = without
	error messages from either GNU awk or Solaris awk

	* 52382: Src/Modules/ksh93.c, Src/Zle/zle_utils.c: avoid \e in C code

2023-12-09  Bart Schaefer  <schaefer@zsh.org>

	* 52366 + fix typo: Completion/Unix/Command/_ant: rename
	find_targets as _ant_targets, replace one sed with substitution

	* 52365: Src/jobs.c, Src/signals.c: record state of exited
	background jobs sooner so as to be visible in TRAPCHLD

2023-12-05  Oliver Kiddle  <opk@zsh.org>

	* 52326, 52372: configure.ac, Src/jobs.c, Doc/Zsh/builtins.yo,
	Completion/Zsh/Command/_kill: add -q option to kill for sigqueue

	* 52373: Completion/Base/Utility/_numbers,
	Completion/Solaris/Command/_dumpadm, Completion/Unix/Command/_xz:
	fix _numbers for suffixes containing % and update affected functions
