@@ -1,5 +1,8 @@
 2024-01-24  Bart Schaefer  <schaefer@zsh.org>
 
+	* 52482: Src/subst.c: strip trailing newlines in emulation modes
+	of ${ command; }, for bash/ksh compatibility
+
 	* 52476 + cf. 52479: Etc/FAQ.yo: more about nofork substitution
 
 	* 52477: Src/Modules/curses.c: fix "zcurses mouse delay ..."
